--- a/database/connector.cnf
+++ b/database/connector.cnf
@@ -1,6 +1,6 @@
 [client]
 user=root
-password=root
+password=s297293@
 host=127.0.0.1
-database=test
+database=iscritticorsi
 raise_on_warnings=True
